--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -4,17 +4,27 @@ name: Deploy
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
+  # Trigger on:
+  # - Desination branch is 'main'
+  # - PR is closed
+  # - Changes were made in: "themes, screenshots"
   pull_request:
     branches: [main]
     types: [closed]
+    paths: ["themes/**", "screenshots/**"]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # Only run this job if repo is upstream and PR is merged
-    if: github.repository == 'Fresh-Tomato/tomato-theme-base' &&
-      github.event.pull_request.merged == true
+    # Only run this job if:
+    # - Repo is upstream
+    # - PR is merged
+    # - Source branch is "update/theme"
+    if: |
+      github.repository == 'Fresh-Tomato/tomato-theme-base' &&
+      github.event.pull_request.merged == true &&
+      github.head_ref == 'update/theme'
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
